objects/Destination_Location__c.object
<CustomObject>
    <fields>
        <fullName>Banner_Rack_Rate__c</fullName>
        <label>Banner Rack Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Destination_Code__c</fullName>
        <label>Destination Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <formula>Profile_Guide_Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Guide_Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Rack_Rate__c</fullName>
        <label>Quote Rack Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Destination Location</label>
    <nameField>
        <label>Destination Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Destination Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Banner_Rack_Rate__c</columns>
        <columns>Profile_Guide_Location__c</columns>
        <columns>Quote_Rack_Rate__c</columns>
        <columns>Destination_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>